Fixed position of div.preamble inside section.intro

--- a/main/_template.scss
+++ b/main/_template.scss
@@ -7,10 +7,11 @@
             "main    main    sidebar"
             "footer  footer  footer";
     }
-
+    
     .intro {
         grid-area: intro;
         display: flex;
+        position: relative;
     }
 
     .main {
