--- a/main/_organisms.scss
+++ b/main/_organisms.scss
@@ -14,9 +14,9 @@
     .summary {
       background-color: $primary;
       max-width: 500px;
-      margin-top: -450px;
-      margin-bottom: 200px;
-      margin-left: 50px;
+      position: absolute;
+      top: 170px;
+      left: 49px;
       padding: 1%;
     }
     
